--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,7 +1,7 @@
 {% extends "_base.html" %}
 {% block content %}
 
-<h1>Welcome to FlaskTaskr</h1>
+<h1>My Docket</h1>
 <br>
 <a href="{{ url_for('logout') }}">Logout</a>
 <div class="add-task">
