--- a/static/css/main.css
+++ b/static/css/main.css
@@ -134,3 +134,22 @@ label {
   text-decoration:none;
   position:relative;
 }
+
+.inline-form .input-group{
+  display: inline-block;
+  margin: 10px 5px;
+}
+
+.input-group input {
+  width: 100%;
+}
+
+
+
+
+
+
+
+
+
+
