--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome to FlaskTaskr!!</title>
+    <title>My Docket</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
   </head>
   <body>
