--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,8 @@
 {% extends "_base.html" %}
 {% block content %}
 
-  <h1>Welcome to FlaskTaskr.</h1>
-  <h3>Please login to access your task list.</h3>
+  <h1>Welcome to Docket</h1>
+  <h3>Please login to view your tasks</h3>
 
   <form method="post" action="/">
     {{ form.csrf_token }}
