--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,7 @@
 {% extends "_base.html" %}
 {% block content %}
 
-  <h1>Welcome to FlaskTaskr.</h1>
+  <h1>Welcome to Docket.</h1>
   <h3>Please register to access the task list.</h3>
   <div class="half-width">
     <form method="POST" action="">
