--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h1>Welcome to FlaskTaskr.</h1>
+<h1>Welcome to Docket.</h1>
 <h3>Please sign in to access your task list</h3>
 
 <form class="form-signin" role="form" method="post" action="/">
@@ -30,8 +30,7 @@
   <button class="btn btn-sm btn-success" type="submit">Sign in</button>
   <br>
   <br>
-  <p><em>Need an account?</em><a href="/register">Signup!!</a></p>
+  <p><em>Need an account?</em><a href="/register"> Sign Up</a></p>
 </form>
 
 {% endblock %}
-
