--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <h1>Welcome to Docket.</h1>
-<h3>Please complete the form to create an account</h3>
+<h3>Please register to access the task list.</h3>
 <form method="POST" action="/register/">
   {{ form.csrf_token }}
   <div class="input-group">
