--- a/templates/_base.html
+++ b/templates/_base.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Welcome to Docket</title>
+    <title>Welcome to Docket!!!</title>
     <!-- styles -->
     <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/yeti/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
   </head>
   <body>
 
@@ -50,10 +50,13 @@
         {% block content %}
         {% endblock %}
 
+      <br>
+      <br>
+      <br>
       </div>
       <div class="footer">
         <hr>
-        <p>Source availabe <a href="https://www.github.com/tylerhuntington222/Docket-app/">here</a></p>
+        <a href="https://www.github.com/tylerhuntington222/Docket-app/">Source</a></p>
       </div>
     </div><!-- /.container -->
 
@@ -62,4 +65,3 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   </body>
 </html>
-
