--- a/project/templates/_base.html
+++ b/project/templates/_base.html
@@ -27,9 +27,9 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             {% if not session.logged_in %}
-              <li><a href="/register">Sign Up</a></li>
+              <li><a href="/users.register">Sign Up</a></li>
             {% else %}
-              <li><a href="/logout">Log Out</a></li>
+              <li><a href="/users.logout">Log Out</a></li>
             {% endif %}
           </ul>
         </div><!--/.nav-collapse -->
