--- a/project/templates/tasks.html
+++ b/project/templates/tasks.html
@@ -27,8 +27,8 @@
               <td width="50px">{{ task.priority }}</td>
               <td width="90px">{{ task.poster.name }}</td>
               <td>
-                <a href="{{ url_for('delete_entry', task_id = task.task_id) }}">Delete</a>  -
-                <a href="{{ url_for('complete', task_id = task.task_id) }}">Mark as Complete</a>
+                <a href="{{ url_for('tasks.delete_entry', task_id = task.task_id) }}">Delete</a>  -
+                <a href="{{ url_for('tasks.complete', task_id = task.task_id) }}">Mark as Complete</a>
               </td>
             </tr>
           {% endfor %}
@@ -58,7 +58,7 @@
               <td width="50px">{{ task.priority }}</td>
               <td width="90px">{{ task.poster.name }}</td>
               <td>
-                 <a href="{{ url_for('delete_entry', task_id = task.task_id) }}">Delete</a>
+                 <a href="{{ url_for('tasks.delete_entry', task_id = task.task_id) }}">Delete</a>
               </td>
             </tr>
           {% endfor %}
@@ -69,7 +69,7 @@
   <div class="col-md-4">
     <div class="add-task">
       <h3>Add a new task:</h3>
-        <form action="{{ url_for('new_task') }}" method="post">
+        <form action="{{ url_for('tasks.new_task') }}" method="post">
           {{ form.csrf_token }}
           <div class="form-group">
             {{ form.name(placeholder="task name") }}
