--- a/project/templates/_base.html
+++ b/project/templates/_base.html
@@ -32,6 +32,11 @@
               <li><a href="/logout">Log Out</a></li>
             {% endif %}
           </ul>
+          {% if session.logged_in %}
+          <ul class="nav navbar-nav navbar-right">
+            <li><a>{{username}}</a></li>
+          </ul>
+          {% endif %}
         </div><!--/.nav-collapse -->
       </div>
     </div>
