--- a/project/templates/tasks.html
+++ b/project/templates/tasks.html
@@ -27,8 +27,13 @@
               <td width="70px">{{ task.priority }}</td>
               <td width="100px">{{ task.poster.name }}</td>
               <td>
-                <a href="{{ url_for('tasks.delete_entry', task_id = task.task_id) }}">Delete</a>  -
-                <a href="{{ url_for('tasks.complete', task_id = task.task_id) }}">Mark as Complete</a>
+                {% if (task.poster.name == session.name or 
+                  session.role == 'admin') %}
+                  <a href="{{ url_for('tasks.delete_entry', task_id = task.task_id) }}">Delete</a>  -
+                  <a href="{{ url_for('tasks.complete', task_id = task.task_id) }}">Mark as Complete</a>
+                {% else %}
+                  <span>N/A</span>
+                {% endif %}
               </td>
             </tr>
           {% endfor %}
