--- a/project/templates/404.html
+++ b/project/templates/404.html
@@ -4,6 +4,6 @@
 
 	<h1>404</h1>
 	<p>Sorry, there's nothing here.</p>
-	<p><a ref="{{url_for('users.login')}}">Go back home</a></p>
+	<p><a href="{{url_for('users.login')}}">Go back home</a></p>
 
 {% endblock %}
