Modify login page

--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-<h1>Welcome to Docket.</h1>
-<h3>Please sign in to access your task list</h3>
+<h1>Welcome to Docket</h1>
+<h3>Please sign in to view your tasks.</h3>
 
 <form class="form-signin" role="form" method="post" action="/">
   {{ form.csrf_token }}
